--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "movie-trailer": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-youtube": "^7.13.0",
     "typescript": "^4.0.3",
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.6",
     "babel-plugin-module-resolver": "^4.0.0"
   }
 }
