--- a/package.json
+++ b/package.json
@@ -45,7 +45,17 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.2",
+    "@types/enzyme": "^3.10.8",
     "@types/react-router-dom": "^5.1.6",
-    "babel-plugin-module-resolver": "^4.0.0"
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "enzyme": "^3.11.0",
+    "react-test-renderer": "^17.0.1"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
